# ImageJ

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ImageCanvas.cpp  README.md  main.cpp  makefile
config/: common.cmake  main.cmake  opencv.cmake  qmls.cmake  variable.cmake
config/linux/: debug.cmake  googletest.cmake  release.cmake
config/windows/: debug.cmake  googletest.cmake  release.cmake
include/: test_header.h
include/frames/: MainFrame.h  RightSidebar.h
include/image_canvas/: ImageCanvas.h  ImageCanvasDetail.h
include/layout/: JBody.h  JRightside.h  JToolbar.h
include/logger/: logger.h
include/menu/: menu.h
include/utils/: logger.h
include/widgets/: HistogramDialog.h  HistogramWidget.h  ImagePreviewDialog.h  JCanvas.h  MainWidget.h  RightSidebar.h
include/widgets/histogram/: HistogramDialog.h  HistogramWidget.h
include/widgets/preview/: ImagePreviewDialog.h
qmls/: JLeftPanel.qml  JMenu.qml  JRightPanel.qml  Main.qml
src/frames/: MainFrame.cpp  RightSidebar.cpp
src/image_canvas/: Histogram.cpp  ImageCanvasBase.cpp  ImageCanvasMouse.cpp  ImageCanvasPaint.cpp  ImageCanvasView.cpp  ImageCanvasWheel.cpp  ImageDragdrop.cpp
src/layout/: JBody.cpp  JRightside.cpp  JToolbar.cpp
src/menu/: menuBase.cpp
src/uis/: widget.ui
src/widgets/: HistogramDialog.cpp  HistogramWidget.cpp  ImagePreviewDialog.cpp  MainWidget.cpp  RightSidebar.cpp
src/widgets/JCanvas/: JCanvasBase.cpp  JCanvasParent.cpp  JCanvasSubProcess.cpp
src/widgets/histogram/: HistogramDialog.cpp  HistogramWidget.cpp
src/widgets/preview/: ImagePreviewDialog.cpp
tests/: MainFrameTest.cpp  image_canvas_test.cpp  main_frame_test.cpp  right_sidebar_test.cpp  test.cpp
